derive/tests/snapshots/disallow_zero/Pallet/get_all_pallets.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `pallet` table.
    pub fn get_all_pallets<'a>(&'a self) -> impl Iterator<Item = Pallet> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().pallet().iter()
    }
}
