derive/tests/snapshots/disallow_zero/Pallet/get_pallets_by_warehouse_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get a `Pallet` iterator that contains all rows in the `pallet` table whose value matches the value from the single-column btree index on the `warehouse_id` column.
    pub fn get_pallets_by_warehouse_id<'a>(
        &'a self,
        warehouse_id: impl Into<WarehouseId>,
    ) -> impl Iterator<Item = Pallet> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().pallet().warehouse_id().filter(warehouse_id.into().value())
    }
}
impl<T: crate::spacetimedsl::ReadContext> crate::spacetimedsl::ReadOnlyDSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get a `Pallet` iterator that contains all rows in the `pallet` table whose value matches the value from the single-column btree index on the `warehouse_id` column.
    pub fn get_pallets_by_warehouse_id<'a>(
        &'a self,
        warehouse_id: impl Into<WarehouseId>,
    ) -> impl Iterator<Item = Pallet> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().pallet().warehouse_id().filter(warehouse_id.into().value())
    }
}
